[package]
name = "rust_maps"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
rhai = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement", "Navigator", 
    "Geolocation", "Position", "Coordinates", "DeviceMotionEvent", "DeviceAcceleration", 
    "console", "Storage", "Performance"
] }
